2008-05-18  Nicola Pero  <nicola.pero@meta-innovation.com>
	
	* configure.ac: Install GNUstep.conf in /etc/GNUstep/GNUstep.conf
	on OpenBSD, FreeBSD and NetBSD.  Packagers are free to install the
	configuration file wherever it best suits them; but for simplicity
	and consistency if gnustep-make is compiled from source and
	nothing else is specified, we default to /etc/GNUstep/GNUstep.conf
	on all systems.
	* configure: Regenerated.
	* Documentation/releasenotes.texi: Describe change.
	* RELEASENOTES: Regenerated.
	
2008-03-30  Nicola Pero  <nicola.pero@meta-innovation.com>
	
	* clean_os.sh: Support new versions of Darwin, and future ones as
	well.  Patch by Blake Nicholson <blaken@umich.edu> with a few
	changes.

2008-03-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/README.MinGW: Fixed subversion URL to get libobjc
	- reported by Christopher Chandler <chrisjechandler@mac.com>.

2008-03-11  Adam Fedor  <fedor@gnu.org>

	* Version 2.0.5

2008-03-11  Nicola Pero  <nicola.pero@meta-innovation.com>

	Fixed NEEDS_GUI and xxx_NEEDS_GUI options to accept "yes" as well
	as "YES", to be consistent with all the other boolean options in
	gnustep-make.
	* Instance/rules.make (INTERNAL_NEEDS_GUI): Changed to accept
	"yes" as well as "YES"
	* Instance/application.make (NEEDS_GUI): Use yes/no in preference
	to YES/NO for the default values.
	* Instance/bundle.make: Same change.
	* Instance/framework.make: Same change.
	* Instance/gswapp.make: Same change.
	* Instance/gswbundle.make: Same change.
	* Instance/library.make: Same change.
	* Instance/palette.make: Same change.

	* Documentation/releasenotes.texi: Suggest yes/no in preference to
	YES/NO as possible values for NEEDS_GUI and xxx_NEEDS_GUI.
	* RELEASENOTE: Regenerated.
	
2008-03-03  Nicola Pero  <nicola.pero@meta-innovation.com>

	Updated C++ and ObjC++ support so that it automatically uses g++
	to link C++ and ObjC++ files.
	* configure.ac (AC_PROG_CXX): Detect a C++ compiler (if any).